# activist-scout

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  STORY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: METHODOLOGY.md
examples/: README.md
examples/sample_reports/: IC_MEMO.md
src/activist_scout/: __init__.py  config.py  deep_dive.py  domain.py  monitor.py  pipeline.py  utils.py
src/activist_scout/stages/: __init__.py  backtest.py  classify.py  enrich.py  fetch.py  related_party.py  report.py  score.py  screen.py  validate.py
tests/: test_domain.py  test_smoke.py
tools/: scan_rerate.py
tools/filing_intel/: __init__.py  __main__.py  classify.py  extract_llm.py  fetch_filing.py  grounding.py  report.py  resolve_filer.py
